sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: type mismatch;
 found   : Int(1)
 required: String
    if (plusPetit(position,position)+1) {position+=1}
                                     ^